# -

./: README.md
ChangeSkin/: settings.gradle
ChangeSkin/app/: build.gradle
ChangeSkin/app/src/androidTest/java/com/xsl/changeskin/: ExampleInstrumentedTest.java
ChangeSkin/app/src/main/: AndroidManifest.xml
ChangeSkin/app/src/main/java/com/xsl/changeskin/: MainActivity.java  MyApplication.java
ChangeSkin/app/src/main/res/layout/: activity_main.xml
ChangeSkin/app/src/main/res/values/: colors.xml
ChangeSkin/gradle/wrapper/: gradle-wrapper.properties
ChangeSkin/skin/: build.gradle
ChangeSkin/skin/src/main/: AndroidManifest.xml
ChangeSkin/skin/src/main/res/values/: colors.xml
ChangeSkin/skincore2/: build.gradle
ChangeSkin/skincore2/src/main/: AndroidManifest.xml
ChangeSkin/skincore2/src/main/res/values/: strings.xml
MyEventBus/: settings.gradle
MyEventBus/app/: build.gradle
MyEventBus/app/src/main/: AndroidManifest.xml
MyEventBus/app/src/main/res/layout/: activity_main2.xml
MyEventBus/gradle/wrapper/: gradle-wrapper.properties
NDHandler/: settings.gradle
NDHandler/app/: build.gradle
NDHandler/app/src/main/: AndroidManifest.xml
NDHandler/app/src/main/res/values/: strings.xml
NDHandler/gradle/wrapper/: gradle-wrapper.properties
TestFFmpeg10/: settings.gradle
TestFFmpeg10/app/: build.gradle
TestFFmpeg10/app/src/main/: AndroidManifest.xml
TestFFmpeg10/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TestFFmpeg10/app/src/main/res/values/: strings.xml
TestFFmpeg10/gradle/wrapper/: gradle-wrapper.properties
(+31 files in other folders)
